--- a/index.html
+++ b/index.html
@@ -32,12 +32,16 @@
 
 <script>
     setInterval(function(){
-        $.get("/", function(data) {
-            if(data.message){
-                $("#message-list").append("<tr><td>" + data.username + "</td><td>" + data.message + "</td></tr>" );
-            }
+    $.get("/get-messages", function(data) {
+        // Bersihkan tabel sebelum menambahkan data baru
+        $("#message-list").empty();
+
+        // Iterasi melalui data yang diterima dan tambahkan ke tabel
+        data.forEach(function(message) {
+            $("#message-list").append("<tr><td>" + message.user_id + "</td><td>" + message.message + "</td></tr>");
         });
-    }, 1000);
+    });
+}, 1000);
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
